--- a/MVC5Course/MVC5Course.csproj
+++ b/MVC5Course/MVC5Course.csproj
@@ -223,6 +223,8 @@
       <DependentUpon>Fabrics.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Productpartial.cs" />
+    <Compile Include="Models\Validate\MaxWordAttribute.cs" />
+    <Compile Include="Models\Validate\商品名稱包含Amber字串.cs" />
     <Compile Include="Models\ViewModels\ProductListVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
